# Cmake-first-steps

SHARED .dll/: CMakeLists.txt  MyLib.c
static .lib/: CMakeLists.txt  main.c
